# bigindexer

./: .bgi-mono-cache.json  .coverage  .gitignore  BENCHMARK_REPORT.md  CLA.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  MEMORANDUM.md  NOTICE  PHASE2_SUMMARY.md  PHASE9_PLAN.md  README.md  TASKPLAN.md  WORKFLOW.md  action.yml  benchmark_results.json  benchmark_results_final.json  bgi-benchmarks.json  bgi-phase3-benchmark.json  bgi-unresolved.jsonl  bgi2.md  brainstorming.md  cli.py  glama.json  masterplan.md  opencode.json  owners_concerns.md  pipeline.py  problem.md  pyproject.toml  server.json  shared.md  validation.md
.gemini/: settings.json
.github/workflows/: cla.yml  dco.yml
agents/: ARCHIVIST.md  JUDGE.md  MEASURER.md  PRAGMATIST.md  SKEPTIC.md  VISIONARY.md
bgi/: MEMORANDUM.md  README.md  TASKPLAN.md  __init__.py  bgi-sep.db  bgi-unresolved.jsonl  cli.py  pipeline.py
bgi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bgi/ai/: curator.py  forecaster.py  narrator.py
bgi/bgi/: __init__.py  benchmark.py  cli.py  pipeline.py  telemetry.py
bgi/bgi.egg-info/: entry_points.txt  requires.txt  top_level.txt
bgi/bgi/ai/: narrator.py
bgi/bgi/delta/: cache.py  diff.py
bgi/bgi/gate1/: ai_fallback.py  c_rules.py  csharp_scanner.py  entry_points.py  go_rules.py  go_scanner.py  java_scanner.py  js_scanner.py  kotlin_rules.py  kotlin_scanner.py  lang_registry.py  mono_cache.py  parallel_scanner.py  php_rules.py  php_scanner.py  python_rules.py  query_fingerprinter.py  ruby_scanner.py  rust_scanner.py  scala_scanner.py  scanner.py  ts_scanner.py
bgi/bgi/gate2/: census.py  keylock.py
bgi/bgi/gate3/: drs.py  import_proximity.py
bgi/bgi/indexer/: __init__.py  api.py  schema.py
bgi/bgi/mcp/: __init__.py  context.py  (+1 more)
bgi/core/: cov.py
bgi/gate1/: ai_fallback.py  c_scanner.py  csharp_rules.py  csharp_scanner.py  elixir_rules.py  elixir_scanner.py  generic_scanner.py  js_scanner.py  lua_scanner.py  php_scanner.py  ruby_rules.py  ruby_scanner.py  rules.py  rust_rules.py  scala_rules.py  scala_scanner.py  scanner.py  ts_scanner.py  typescript_rules.py
bgi/gate3/: drs.py
bgi/indexer/: builder.py  planner.py
bgi/output/: route_manifest.py
bgi/sep/: pool.py
bgi/tests/: test_delta_cache.py  test_gate1.py  test_gate1_c.py  test_gate1_csharp.py  test_gate1_elixir.py  test_gate1_go.py  test_gate1_java.py  test_gate1_lua.py  test_gate1_ruby.py  test_html_viz.py  test_monorepo_diff_routes.py  test_narrator.py  test_pipeline.py  test_sep.py
core/: edges.py  fingerprint.py
docs/: CONTRIBUTING_LANGUAGES.md  GITHUB_ACTION_PR_RISK_BOT.md  INDEX_SCHEMA.md  LANGUAGE_SUPPORT.md  MCP_EXAMPLE_TRANSCRIPTS.md  MCP_PROMPT_PROTOCOL.md  MCP_QUICKSTART_DEMO.md  MCP_REAL_TRANSCRIPT.md  MCP_SETUP.md  MCP_WITH_CONTINUE.md  QUERY_PLANNER.md  TELEMETRY.md  VALIDATION_EVIDENCE.md
docs/blog/: I_LEFT_CODY.md
gate1/: java_rules.py  kotlin_scanner.py  lua_rules.py  rust_scanner.py
ide/vscode/: package-lock.json  package.json  tsconfig.json
output/: graph.py
scripts/: benchmark_mask3_pass.py  mcp-demo.sh  pr_architecture_risk_bot.py  refresh_validation_rollups.py  run_gemini_validation.py  score_gemini_auto_runs.py  score_second_evidence.py  validate_language_registry.py  validate_phase6_search.py
scripts/external_benchmark/: bgi_clusters.py  bgi_edge_graph.py  ground_truth.py  louvain_baseline.py  louvain_baseline_go.py  metrics.py  run_repo.py
scripts/rollups/: github_traffic.py  weekly.py
sessions/: 2026-05-05-hybrid-code-indexing-bgi.md  README.md
sudolaps/: agents.md  graph.html  graph.json
tests/: conftest.py  test_ast_cache.py  test_benchmark.py  test_census.py  test_cov.py  test_curator.py  test_delta_cache.py  test_diff_report.py  test_function_prefilter.py  test_gate1_ai_fallback.py  test_gate1_generic.py  test_gate1_go.py  test_gate1_js.py  test_gate1_kotlin.py  test_gate1_php.py  test_gate1_rust.py  test_gate1_scala.py  test_gate1_ts.py  test_gate2.py  test_gate3.py  test_graph_output.py  test_import_proximity.py  test_incremental_auto.py  test_index_builder.py  test_index_schema.py  test_language_registry.py  test_mcp_context.py  test_mcp_server.py  test_mono_cache.py  test_narrator.py  test_phase2.py  test_pipeline.py  test_pr_risk_bot.py  test_query_api.py  test_query_planner.py  test_spectral_masks.py  test_telemetry.py  test_water_clock.py
tests/fixtures/: auth_module.py
validation/: CLI_MATRIX.md  README.md  SCORING_RUBRIC.md  prompts.md  repos.csv  runs.csv  scoring.md  summary-template.md
website/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.debug  README.md  deploy-azure.sh  package-lock.json  package.json  server.js
website/public/: 404.html  blog-i-left-cody.html  blog-reduce-input-token-costs-agentic-tasks.html  blog.html  demo.html  index.html  records.html  validation.html
(+179 files in other folders)
